modernizacion JavaFX homologada con version final Swing, control de cuotas y generador de instalador EXE